@startuml

skinparam class {
    HeaderBackgroundColor #DAE8FC
	BackgroundColor White
	ArrowColor black
	BorderColor 6C8EBF
	FontSize 15
	headerFontColor 6C8EBF
	style Frame
	FontName Arial Rounded MT Bold

	}
hide circle

skinparam classAttributeIconSize 0

skinparam classAttributeFontSize 13

skinparam shadowing false

skinparam defaultFontName Segoe UI
class ConfigureTheLocationOfTheHouseControllerRest
class GeographicAreaRepo
class GeographicArea
class OccupationArea


ConfigureTheLocationOfTheHouseControllerRest "1" -down-> "1" GeographicAreaRepo
GeographicArea "1" --> "1" OccupationArea
GeographicAreaRepo "1" --> "0..*" GeographicArea


ConfigureTheLocationOfTheHouseControllerRest : + changeLocationOfTheHouse ( )
ConfigureTheLocationOfTheHouseControllerRest : - geographicAreaRepo
ConfigureTheLocationOfTheHouseControllerRest : - houseRepo

GeographicAreaRepo : + getGeographicAreaByNameDTO ( )
GeographicAreaRepo : + occupationAreaLimits ( )

OccupationArea : + occupationAreaLimits ( )
OccupationArea : - centerLocation: Location


GeographicArea : + getGeographicAreaByNameDTO ( )
GeographicArea : -  name: String
@enduml